kubernetes/core/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core
  template:
    metadata:
      labels:
        app: core
    spec:
      containers:
        - name: core
          image: us-central1-docker.pkg.dev/postrix-development/development-docker/core:latest
          ports:
            - containerPort: 8000
