kubernetes/core/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "dev.postrix.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: core
            port:
              number: 80
